[package]
name = "bonk-board-image-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.1.1", features = ["derive"] }
flexi_logger = "0.24.2"
image = "0.24.5"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
